# terrain-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PATCHNOTES.md  PROCEDURAL_GENERATION_ENGINE_SPEC.md  README.md  README_SHOWCASE.md  REVIEW_NOTES.md  SHOWCASE.md  TODO_COMPLETE_REPORTS.md  USAGE.md  deny.toml  generate_all_reports.sh  phase4_library.json  prefab_library.json  run_all_tests.sh
configs/: bsp_basic.json  bsp_large.json  cellular_basic.json  cellular_dense.json
demo/: COMPOSITE_DEMOS.md  Cargo.toml  DEMO_USECASES.md  README.md  fixed_gsb.txt  manifest.toml  output.txt  run_png_demo.sh  run_semantic_demo.sh  run_tests.sh  run_visualization_demo.sh  test_semantic.txt
docs/: API.md  ARCHIVED_REPORT_SYSTEM.md  ARCH_UNIFICATION.md  DEMO_FRAMEWORK_OVERVIEW.md  DEMO_FRAMEWORK_PROPOSAL.md  DEVELOPMENT_SUMMARY.md  FUTURE_ALGORITHMS.md  IMPLEMENTATION_PLAN.md  JSON_CONFIG_PLAN.md  MIGRATION_0_6.md  PREFAB_EXPANSION_PLAN.md  ROADMAP_V0_4_0.md  ROADMAP_V0_6_0.md  ROGUELIKE_GENERATION_ANALYSIS.md
examples/: advanced_pathfinding.rs  advanced_prefabs.rs  bsp_analysis.rs  complete_workflow.rs  conditional_pipelines.rs  delaunay_connections.rs  distance_transforms.rs  enhanced_wfc.rs  hierarchical_markers.rs  morphological_operations.rs  phase1_demo.rs  phase2_demo.rs  phase4_workflow.rs  pipeline_templates.rs  requirement_generation.rs  requirements_demo.rs  spatial_workflow.rs  vertical_connectivity.rs
report_configs/: all_algorithms.json  constraint_tests.json  gsb_tests.json  hybrid_algorithms.json  layered.json  map_types.json  maze_patterns.json  performance_tests.json  pipeline.json  seed_study.json  single_algo.json
src/: algorithm.rs  algorithms.rs  cell.rs  config.rs  constraints.rs  error.rs  grid.rs  lib.rs  ops.rs  pipeline.rs  rng.rs  semantic.rs  semantic_tests.rs  (+3 more)
(+204 files in other folders)
