[package]
name = "terrain-forge"
version = "0.6.0"
edition = "2021"
authors = ["Elias Vahlberg <elias.vahlberg.2@gmail.com>"]
license = "MIT"
description = "A modular procedural generation engine for terrain, dungeons, and maps"
repository = "https://github.com/EliasVahlberg/terrain-forge"
documentation = "https://docs.rs/terrain-forge"
readme = "README.md"
keywords = ["procgen", "terrain", "dungeon", "roguelike", "gamedev"]
categories = ["game-development", "algorithms"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "demo"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bracket-noise = "0.8"
